# Canvo

./: .cursorignore  .gitignore  README.md  build.sh  build_types.sh  distribution_files.txt  invite_user.sh  package.json  redeploy.sh
ai-service/: .gitignore  README.md  main.py  pyproject.toml
ai-service/ai-service/: database.py  main.py  scripts.py  semantic_search.py  test_semantic_search.py
ai-service/db/: init_db.sh  reset_db.sh  run_migrations.sh
ai-service/db/migrations/: 001_schema.sql
backend/: README.md  ecosystem.config.js  package.json  tsconfig.json  tsconfig.tsbuildinfo
backend/db/: init_db.sh  reset_db.sh  run_migrations.sh
backend/src/: app.ts  constants.ts  db.ts  llm.ts  util.ts  websockets.ts
frontend/: index.html  package.json  tsconfig.app.json
frontend/src/: App.css  App.tsx  AuthForm.css  AuthForm.tsx  Block.css  Block.tsx  BlockTree.ts  Group.css  Group.tsx  Home.css  Home.tsx  HowTo.css  HowTo.tsx  Layer.css  Layer.tsx  Login.css  Login.tsx  Menu.css  Menu.tsx  Modal.css  NetworkEditor.css  NetworkEditor.tsx  NetworkTypes.ts  Node.css  Node.tsx  NodeModel.ts  OutputView.css  OutputView.tsx  ParametersPane.css  ParametersPane.tsx  Project.css  Project.tsx  ProjectListItem.tsx  SettingsWindow.css  SettingsWindow.tsx  TableView.tsx  Transformation.css  Transformation.tsx  TripleButton.css  TripleButton.tsx  (+6 more)
scripts/: build_and_deploy.sh  connect.sh  deploy.sh  provision_server.sh  redeploy.sh
scripts/app/: build.sh  (+13 more)
server-config/: ai-service.service  canvo-ai.service  canvo-server.service
shared/: package.json  tsconfig.json
(+70 files in other folders)
